--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
             android:text="@string/char_name"
             android:textSize="@dimen/question_text_size"/>
             <EditText
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -78,7 +79,7 @@
                 android:textColor="@color/falloutTextColor"
                 android:textSize="@dimen/answer_text_size"/>
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/sex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sex"
@@ -160,31 +161,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <RadioButton
-
+                    android:id="@+id/answer1_responsibility"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer1_responsibility"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer2_responsibility"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer2_responsibility"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer3_responsibility"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer3_responsibility"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer4_responsibility"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer4_responsibility"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer5_responsibility"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer5_responsibility"
@@ -198,26 +199,31 @@
             android:layout_marginBottom="@dimen/answer_margin_bottom"
             android:textSize="@dimen/question_text_size"/>
             <CheckBox
+                android:id="@+id/antidepresives"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/answer1_equipment"
            />
             <CheckBox
+                android:id="@+id/survival_kit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/answer2_equipment"
                />
             <CheckBox
+                android:id="@+id/encyclopedia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/answer3_equipment"
                 />
             <CheckBox
+                android:id="@+id/sun_glasses"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/answer4_equipment"
                 />
             <CheckBox
+                android:id="@+id/nothing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/answer5_equipment"
@@ -235,31 +241,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <RadioButton
-
+                    android:id="@+id/answer1_party"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer1_party"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer2_party"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer2_party"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer3_party"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer3_party"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer4_party"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer4_party"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer5_party"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer5_party"
@@ -277,31 +283,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <RadioButton
-
+                    android:id="@+id/answer1_fear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer1_fear"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer2_fear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer2_fear"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer3_fear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer3_fear"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer4_fear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer4_fear"
                     android:textSize="@dimen/answer_text_size"/>
                 <RadioButton
-
+                    android:id="@+id/answer5_fear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/answer5_fear"
@@ -320,7 +326,8 @@
             android:textColor="@color/falloutTextColor"
             android:paddingLeft="@dimen/button_padding_sides"
             android:paddingRight="@dimen/button_padding_sides"
-            android:background="@android:color/holo_green_dark"/>
+            android:background="@android:color/holo_green_dark"
+            android:onClick="check"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
