First version on forum

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.android.falloutcharacterquiz.MainActivity">
@@ -11,65 +11,65 @@
 
 
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="center"
-        android:src="@drawable/background" />
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scaleType="center"
+    android:src="@drawable/background" />
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:orientation="horizontal">
-<ImageView
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:src="@drawable/lefttopline"
-    android:layout_weight="1"
-    android:layout_gravity="center_vertical"
-    />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/lefttopline"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="@string/title"
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="@string/title"
 
-            android:textSize="@dimen/title_text_size"
+                android:textSize="@dimen/title_text_size"
 
-            android:textStyle="bold"
+                android:textStyle="bold"
 
-            android:layout_gravity="center"/>
+                android:layout_gravity="center"/>
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/righttopline"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical"
-        />
-</LinearLayout>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/righttopline"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:layout_marginBottom="@dimen/answer_margin_bottom"
-            android:text="@string/char_name"
-            android:textSize="@dimen/question_text_size"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/question_margin_top"
+                android:layout_marginBottom="@dimen/answer_margin_bottom"
+                android:text="@string/char_name"
+                android:textSize="@dimen/question_text_size"/>
             <EditText
                 android:id="@+id/name"
                 android:layout_width="match_parent"
@@ -78,20 +78,21 @@
 
                 android:textColor="@color/falloutTextColor"
                 android:textSize="@dimen/answer_text_size"/>
-        <TextView
-            android:id="@+id/sex"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sex"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:layout_marginBottom="@dimen/answer_margin_bottom"
-            android:textSize="@dimen/question_text_size"/>
+            <TextView
+                android:id="@+id/sex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sex"
+                android:layout_marginTop="@dimen/question_margin_top"
+                android:layout_marginBottom="@dimen/answer_margin_bottom"
+                android:textSize="@dimen/question_text_size"/>
 
             <RadioGroup
                 android:id="@+id/rg_q1"
-                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-              >
+                >
                 <RadioButton
 
                     android:id="@+id/male"
@@ -106,56 +107,57 @@
                     android:text="@string/answer_female"
                     android:textSize="@dimen/answer_text_size"/>
             </RadioGroup>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/question_problems"
-            android:layout_marginTop="@dimen/question_margin_top"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/question_problems"
+                android:layout_marginTop="@dimen/question_margin_top"
 
-            android:layout_marginBottom="@dimen/answer_margin_bottom"
-            android:textSize="@dimen/question_text_size"/>
-        <RadioGroup
-            android:id="@+id/rg_q2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <RadioButton
-                android:id="@+id/answer1_problems"
-                android:layout_width="match_parent"
+                android:layout_marginBottom="@dimen/answer_margin_bottom"
+                android:textSize="@dimen/question_text_size"/>
+            <RadioGroup
+                android:id="@+id/rg_q2"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/answer1_problems"
-                android:textSize="@dimen/answer_text_size"/>
-            <RadioButton
-                android:id="@+id/answer2_problems"
-                android:layout_width="match_parent"
+                >
+                <RadioButton
+                    android:id="@+id/answer1_problems"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/answer1_problems"
+                    android:textSize="@dimen/answer_text_size"/>
+                <RadioButton
+                    android:id="@+id/answer2_problems"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/answer2_problems"
+                    android:textSize="@dimen/answer_text_size"/>
+                <RadioButton
+                    android:id="@+id/answer3_problems"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/answer3_problems"
+                    android:textSize="@dimen/answer_text_size"/>
+                <RadioButton
+                    android:id="@+id/answer4_problems"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/answer4_problems"
+                    android:textSize="@dimen/answer_text_size"/>
+                <RadioButton
+                    android:id="@+id/answer5_problems"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/answer5_problems"
+                    android:textSize="@dimen/answer_text_size"/>
+            </RadioGroup>
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/answer2_problems"
-                android:textSize="@dimen/answer_text_size"/>
-            <RadioButton
-                android:id="@+id/answer3_problems"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/answer3_problems"
-                android:textSize="@dimen/answer_text_size"/>
-            <RadioButton
-                android:id="@+id/answer4_problems"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/answer4_problems"
-                android:textSize="@dimen/answer_text_size"/>
-            <RadioButton
-                android:id="@+id/answer5_problems"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/answer5_problems"
-                android:textSize="@dimen/answer_text_size"/>
-        </RadioGroup>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/question_responsibility"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:layout_marginBottom="@dimen/answer_margin_bottom"
-            android:textSize="@dimen/question_text_size"/>
+                android:text="@string/question_responsibility"
+                android:layout_marginTop="@dimen/question_margin_top"
+                android:layout_marginBottom="@dimen/answer_margin_bottom"
+                android:textSize="@dimen/question_text_size"/>
             <RadioGroup
                 android:id="@+id/rg_q3"
                 android:layout_width="match_parent"
@@ -191,25 +193,25 @@
                     android:text="@string/answer5_responsibility"
                     android:textSize="@dimen/answer_text_size"/>
             </RadioGroup>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/question_equipment"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:layout_marginBottom="@dimen/answer_margin_bottom"
-            android:textSize="@dimen/question_text_size"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/question_equipment"
+                android:layout_marginTop="@dimen/question_margin_top"
+                android:layout_marginBottom="@dimen/answer_margin_bottom"
+                android:textSize="@dimen/question_text_size"/>
             <CheckBox
                 android:id="@+id/antidepresives"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/answer1_equipment"
-           />
+                />
             <CheckBox
                 android:id="@+id/survival_kit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/answer2_equipment"
-               />
+                />
             <CheckBox
                 android:id="@+id/encyclopedia"
                 android:layout_width="wrap_content"
@@ -230,12 +232,12 @@
                 />
 
             <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/question_party"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:layout_marginBottom="@dimen/answer_margin_bottom"
-            android:textSize="@dimen/question_text_size"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/question_party"
+                android:layout_marginTop="@dimen/question_margin_top"
+                android:layout_marginBottom="@dimen/answer_margin_bottom"
+                android:textSize="@dimen/question_text_size"/>
             <RadioGroup
                 android:id="@+id/rg_q4"
                 android:layout_width="match_parent"
@@ -271,13 +273,13 @@
                     android:text="@string/answer5_party"
                     android:textSize="@dimen/answer_text_size"/>
             </RadioGroup>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/question_fear"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:layout_marginBottom="@dimen/answer_margin_bottom"
-            android:textSize="@dimen/question_text_size"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/question_fear"
+                android:layout_marginTop="@dimen/question_margin_top"
+                android:layout_marginBottom="@dimen/answer_margin_bottom"
+                android:textSize="@dimen/question_text_size"/>
             <RadioGroup
                 android:id="@+id/rg_q5"
                 android:layout_width="match_parent"
