--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="button_margin_top">30dp</dimen>
     <dimen name="button_padding_sides">15dp</dimen>
     <dimen name="answer_margin_bottom">10dp</dimen>
+    <dimen name="char_desc_textsize">25dp</dimen>
 </resources>
