--- a/app/src/main/res/layout/activity_display_character.xml
+++ b/app/src/main/res/layout/activity_display_character.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/activity_main"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.example.android.falloutcharacterquiz.DisplayCharacter">
-
-
-
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.android.falloutcharacterquiz.DisplayCharacter">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="center"
         android:src="@drawable/background" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,79 +20,75 @@ tools:context="com.example.android.falloutcharacterquiz.DisplayCharacter">
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/lefttopline"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            />
 
-        <TextView
-            android:id="@+id/resultTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="@string/resultTitle"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
 
-            android:textSize="@dimen/title_text_size"
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:src="@drawable/lefttopline" />
 
-            android:textStyle="bold"
+                <TextView
+                    android:id="@+id/resultTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:text="@string/resultTitle"
+                    android:textSize="@dimen/title_text_size"
+                    android:textStyle="bold" />
 
-            android:layout_gravity="center"/>
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:src="@drawable/righttopline" />
+            </LinearLayout>
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/righttopline"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            />
-    </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:orientation="vertical">
 
-            >
+                <TextView
+                    android:id="@+id/char_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/question_margin_top"
+                    android:text=""
+                    android:textSize="@dimen/char_desc_textsize" />
 
-        <TextView
-            android:id="@+id/char_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:text=""
+                <TextView
+                    android:id="@+id/char_sex"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/question_margin_top"
+                    android:text=""
+                    android:textSize="@dimen/char_desc_textsize" />
 
-            android:textSize="@dimen/char_desc_textsize"/>
-        <TextView
-            android:id="@+id/char_sex"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:text=""
+                <TextView
+                    android:id="@+id/char_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/question_margin_top"
+                    android:text=""
+                    android:textSize="@dimen/char_desc_textsize" />
 
-            android:textSize="@dimen/char_desc_textsize"/>
-        <TextView
-            android:id="@+id/char_type"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/question_margin_top"
-            android:text=""
-            android:textSize="@dimen/char_desc_textsize"/>
-        <ImageView
-            android:id="@+id/char_type_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="center"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/question_margin_top"
-
-            />
-    </LinearLayout></LinearLayout>
+                <ImageView
+                    android:id="@+id/char_type_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/question_margin_top"
+                    android:scaleType="center"/>
+            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
-    </RelativeLayout>
+</RelativeLayout>
