--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,13 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="title_text_size">25dp</dimen>
-    <dimen name="question_text_size">15dp</dimen>
-    <dimen name="answer_text_size">12dp</dimen>
+    <dimen name="title_text_size">25sp</dimen>
+    <dimen name="question_text_size">15sp</dimen>
+    <dimen name="answer_text_size">12sp</dimen>
     <dimen name="question_margin_top">20dp</dimen>
     <dimen name="answer_margin_top">15dp</dimen>
     <dimen name="button_margin_top">30dp</dimen>
     <dimen name="button_padding_sides">15dp</dimen>
     <dimen name="answer_margin_bottom">10dp</dimen>
-    <dimen name="char_desc_textsize">25dp</dimen>
+    <dimen name="char_desc_textsize">25sp</dimen>
 </resources>
